venndb-usage/tests/fails/derive_tuple_struct.rs
use venndb::VennDB;

#[derive(VennDB)]
struct MyStruct(u32);

fn main() {}
