venndb-usage/tests/fails/derive_tuple_struct.stderr
error: `#![derive(VennDB)]` is not currently supported on tuple structs
 --> tests/fails/derive_tuple_struct.rs:4:1
  |
4 | struct MyStruct(u32);
  | ^^^^^^
